--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, FirstAppActivity!</string>
     <string name="app_name">FirstApp</string>
+    <string name="buttonText">Add</string>
 
 </resources>
